--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,13 +10,13 @@ body {
 
 .footer-copyright {
     background-color: #666666;
-    border-top: 8px solid #4a85aa;
+    border-top: 4px solid #4a85aa;
 }
 
 .navbar {
     border-bottom: 3px solid #cccccc;
     background-color: #ffffff;
-    background-image: none;
-    background-repeat: no-repeat;
+    /* background-image: none;
+    background-repeat: no-repeat; */
 
 }
